# ssd_play

./: .gitignore  1_createXml.py  2_createTrainVal.py  3_create_list.sh  4_create_data.sh  5_ssd_run.py  6_ssd_run_direct.sh  7_ssd_test.sh  8_demo.py  README.md  caffe  convert_annoset  create_annoset.py  get_image_size  global_dir.py  name_nImgs_nObjs.txt  pictures.txt  test.txt  test_name_size.txt  trainval.txt
MobileNetv2-SSDLite/: 6_ssd_run_direct.sh  demo_caffe_voc.py
MobileNetv2-SSDLite/voc/: solver_train.prototxt  train.prototxt
PeleeNet/: 6_ssd_run_direct.sh  7_ssd_test.sh  deploy_merged.prototxt  solver_merged.prototxt  test_merged.prototxt  train_merged.prototxt
ResNet_SSD/: ResNet_50_deploy.prototxt  ResNet_50_solver.prototxt  ResNet_50_train_val.prototxt  solver.prototxt  ssd_pascal.py  test.prototxt  train.prototxt  train_bn.prototxt  train_resnet_ssd.sh
VGG_SSD/: solver.prototxt  test.prototxt  train.prototxt  train_vgg_ssd.sh
data/: README.md  labelmap_voc.prototxt
example/testLabelImgs/: testLabelImgs_test_lmdb  testLabelImgs_trainval_lmdb
examples/: CMakeLists.txt
examples/results/: comp4_det_test_person.txt  static.txt
examples/src/: ssd_detect.cpp
examples/tools/: 7_ssd_test.sh  compute_mAP.py  getAllClassResultLists.py  getEachClassResult.py  voc_eval.py
testLabelImgs/Annotations/: 000012.xml  000014.xml  000020.xml  000026.xml  000036.xml  000037.xml  000071.xml  000074.xml  000079.xml  000082.xml  000083.xml  000108.xml  000183.xml  000220.xml  000221.xml  000454.xml  000756.xml  000759.xml  000785.xml
testLabelImgs/labels/: 000012.txt  000014.txt  000020.txt  000026.txt  000036.txt  000037.txt  (+13 more)
tools/: converteCOCOData2VOCData.py  getClassName_nImgs_nOjb.py  getSomeClass.py  merge_caffe_conv_bn.py  plot_loss.py  remove_nolabel_imgs.py  transOriginDataToVOCDir.py
(+12 files in other folders)
